# sqlalchemy-sample-project

./: README.md  pyproject.toml
src/: db_controller.py  food_entity.py  main.py
