[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Tarida George <george@repsmate.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^2.0.4"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
